--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "draggable-vue-directive",
-  "version": "2.0.6",
+  "version": "2.0.7-pi.1",
   "description": "A simple directive to handle drag and drop of any Vue component",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "package.json",
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc --sourceMap"
+    "clear": "rimraf types dist lib coverage node_modules/.cache/hard-source",
+    "clear_update": "yarn clear && yarn",
+    "build": "yarn clear_update && rollup -c"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IsraelZablianov/draggable-vue-directive"
+  },
+  "publishConfig": {
+    "registry": "http://10.0.110.61:8081/repository/pilot-hosted/"
   },
   "keywords": [
     "drag-and-drop",
@@ -28,8 +38,23 @@
     "url": "https://github.com//IsraelZablianov/draggable-vue-directive/issues"
   },
   "homepage": "https://github.com//IsraelZablianov/draggable-vue-directive#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vue": "~2.6.12"
+  },
   "devDependencies": {
-    "vue": "^2.5.13"
+    "@babel/core": "^7.12.3",
+    "@rollup/plugin-babel": "~5.2.1",
+    "@rollup/plugin-commonjs": "~16.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "~10.0.0",
+    "@rollup/plugin-typescript": "~6.1.0",
+    "@types/ms": "~0.7.31",
+    "rimraf": "^3.0.2",
+    "rollup": "~2.33.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "~9.0.0",
+    "tslib": "~2.0.3",
+    "tslint": "~6.1.3",
+    "typescript": "~4.0.5"
   }
 }
