--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,25 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
+    "target": "ES5",
+    "module": "es6",
+    "rootDir": "./src",
+    "outDir": "dist",
     "declaration": true,
-    "outDir": "./dist"
+    "declarationMap": false,
+    "declarationDir": "dist",
+    "skipDefaultLibCheck": true,
+    "strict": true,
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": false,
+    "baseUrl": ".",
+    "types": [
+    ],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "./node_modules/*"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"]
 }
