--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "outDir": "dist",
     "declaration": true,
-    "declarationMap": false,
+    "declarationMap": true,
     "declarationDir": "dist",
     "skipDefaultLibCheck": true,
     "strict": true,
